Principal content added

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,101 +1,45 @@
-<div class="content">
-    <h2 class="content-head is-center">Excepteur sint occaecat cupidatat.</h2>
-
+<div class="content about">
     <div class="pure-g">
-        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+    	<div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
+    		<h2 class="content-head is-center">About us</h2>
+	    	<p>We are an integrated team of designers, web & mobile developers and business strategy types. In our network are some of the brightest engineers in town. If it involves the web, we can build it. If it has a screen, we can design for it.</p>
 
-            <h3 class="content-subhead">
-                <i class="fa fa-rocket"></i>
-                Get Started Quickly
-            </h3>
-            <p>
-                Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
-            </p>
-        </div>
-        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-            <h3 class="content-subhead">
-                <i class="fa fa-mobile"></i>
-                Responsive Layouts
-            </h3>
-            <p>
-                Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
-            </p>
-        </div>
-        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-            <h3 class="content-subhead">
-                <i class="fa fa-th-large"></i>
-                Modular
-            </h3>
-            <p>
-                Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
-            </p>
-        </div>
-        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-            <h3 class="content-subhead">
-                <i class="fa fa-check-square-o"></i>
-                Plays Nice
-            </h3>
-            <p>
-                Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
-            </p>
-        </div>
+			<p>We can help you build an MVP and go to market; provide CTO-as-a-service to guide product and technology decisions; deliver a world-class user experience across devices and form factors. In short, we can take an idea from end to end.</p>
+
+			{{!-- team and expertise --}}
+		</div>
     </div>
 </div>
 
 <div class="ribbon l-box-lrg pure-g">
-    <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-        <img class="pure-img-responsive" alt="File Icons" width="300" src="/img/common/file-icons.png">
-    </div>
     <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
-
-        <h2 class="content-head content-head-ribbon">Laboris nisi ut aliquip.</h2>
-
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor.
-        </p>
+	    <h2 class="content-head is-center">Our clients</h2>
     </div>
+
+    <div class="pure-u-1-4 pure-u-md-1-2 client">
+    	<a href="https://lefooding.com"><img src="/assets/lefooding.png" alt="" class="pure-img-responsive"></a>
+    </div>
+    <div class="pure-u-1-4 pure-u-md-1-2 client">
+    	<a href="https://encontreumnerd.com.br"><img src="/assets/eun.png" alt="" class="pure-img-responsive"></a>
+	</div>
+    <div class="pure-u-1-4 pure-u-md-1-2 client">
+    	<a href="https://gatonobre.com.br"><img src="/assets/gatonobre.png" alt="" class="pure-img-responsive"></a>
+	</div>
+    <div class="pure-u-1-4 pure-u-md-1-2 client">
+    	<a href="javascript:void;"><img src="/assets/lets.png" alt="" class="pure-img-responsive"></a>
+	</div>
 </div>
 
-<div class="content">
-    <h2 class="content-head is-center">Dolore magna aliqua. Uis aute irure.</h2>
-
+<div class="content contact">
     <div class="pure-g">
-        <div class="l-box-lrg pure-u-1 pure-u-md-2-5">
-            <form class="pure-form pure-form-stacked">
-                <fieldset>
-
-                    <label for="name">Your Name</label>
-                    <input id="name" type="text" placeholder="Your Name">
-
-
-                    <label for="email">Your Email</label>
-                    <input id="email" type="email" placeholder="Your Email">
-
-                    <label for="password">Your Password</label>
-                    <input id="password" type="password" placeholder="Your Password">
-
-                    <button type="submit" class="pure-button">Sign Up</button>
-                </fieldset>
-            </form>
-        </div>
-
         <div class="l-box-lrg pure-u-1 pure-u-md-3-5">
-            <h4>Contact Us</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat.
-            </p>
+	        <h2 class="content-head is-center">CONTACT</h4>
+            <p>If you want to take a coffee with us, came here at <em>Rua Fernando Simas, 95 - room 6</em> on our lovely Curitiba or on the links below:</p>
 
-            <h4>More Information</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua.
-            </p>
+            <ul class="contact-list">
+            	<li><a href="mailto:team@locomotiva.ml">team@locomotiva.ml</a></li>
+            	<li><a href="https://github.com/locomotivaml">github.com/locomotivaml</a></li>
+            </ul>
         </div>
     </div>
 </div>
