--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,27 +8,15 @@
 
     <link rel="stylesheet" href="/vendor/pure/pure-min.css">
     <link rel="stylesheet" href="/assets/style.css">
+
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.png">
 </head>
 
 <body>
-
-	<div class="header">
-	    <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-	        <a class="pure-menu-heading" href="/">locomotiva</a>
-
-	        <ul class="pure-menu-list">
-	            <li class="pure-menu-item"><a href="#" class="pure-menu-link">About us</a></li>
-	            <li class="pure-menu-item"><a href="#" class="pure-menu-link">What we do</a></li>
-	            <li class="pure-menu-item"><a href="#" class="pure-menu-link">Contact</a></li>
-	        </ul>
-	    </div>
-	</div>
-
 	<div class="splash-container">
 		<div class="splash-background"></div>
-		<div class="splash-mask"></div>
-	    <div class="splash">
-
+		<div class="splash">
+			<a href="/" class="logo"><img src="/assets/logo.png" alt="LOCOMOTIVA"></a>
 	    	<h1 class="splash-head">Experienced agile developers that designs, develop & grow your products and ideas</h1>
 	    	<p class="splash-subhead">
 	    		We're here to help you small business owners, startups, organizations, brands build and deliver better software, focusing on user outcomes & simplicity, we minimize risk and increase your product's success with quality code & quality humans.
@@ -40,7 +28,7 @@
 		{{{body}}}
 
 	    <div class="footer l-box is-center">
-	        &copy; 2015 Locomotiva
+		    <a href="/" class="logo"><img src="/assets/logo.png" alt="LOCOMOTIVA"></a>
 	    </div>
 	</div>
 
