Public folder changed

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,16 +7,16 @@
     <title>locomotiva.ml</title>
 
     <link rel="stylesheet" href="/vendor/pure/pure-min.css">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="/public/style.css">
 
-    <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/public/favicon.png">
 </head>
 
 <body>
 	<div class="splash-container">
 		<div class="splash-background"></div>
 		<div class="splash">
-			<a href="/" class="logo"><img src="/assets/logo.png" alt="LOCOMOTIVA"></a>
+			<a href="/" class="logo"><img src="/public/logo.png" alt="LOCOMOTIVA"></a>
 	    	<h1 class="splash-head">Experienced agile developers that designs, develop & grow your products and ideas</h1>
 	    	<p class="splash-subhead">
 	    		We're here to help you small business owners, startups, organizations, brands build and deliver better software, focusing on user outcomes & simplicity, we minimize risk and increase your product's success with quality code & quality humans.
@@ -28,7 +28,7 @@
 		{{{body}}}
 
 	    <div class="footer l-box is-center">
-		    <a href="/" class="logo"><img src="/assets/logo.png" alt="LOCOMOTIVA"></a>
+		    <a href="/" class="logo"><img src="/public/logo.png" alt="LOCOMOTIVA"></a>
 	    </div>
 	</div>
 
