--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -17,16 +17,16 @@
     </div>
 
     <div class="pure-u-1-4 pure-u-md-1-2 client">
-    	<a href="https://lefooding.com"><img src="/assets/lefooding.png" alt="" class="pure-img-responsive"></a>
+    	<a href="https://lefooding.com"><img src="/public/lefooding.png" alt="" class="pure-img-responsive"></a>
     </div>
     <div class="pure-u-1-4 pure-u-md-1-2 client">
-    	<a href="https://encontreumnerd.com.br"><img src="/assets/eun.png" alt="" class="pure-img-responsive"></a>
+    	<a href="https://encontreumnerd.com.br"><img src="/public/eun.png" alt="" class="pure-img-responsive"></a>
 	</div>
     <div class="pure-u-1-4 pure-u-md-1-2 client">
-    	<a href="https://gatonobre.com.br"><img src="/assets/gatonobre.png" alt="" class="pure-img-responsive"></a>
+    	<a href="https://gatonobre.com.br"><img src="/public/gatonobre.png" alt="" class="pure-img-responsive"></a>
 	</div>
     <div class="pure-u-1-4 pure-u-md-1-2 client">
-    	<a href="javascript:void;"><img src="/assets/lets.png" alt="" class="pure-img-responsive"></a>
+    	<a href="javascript:void;"><img src="/public/lets.png" alt="" class="pure-img-responsive"></a>
 	</div>
 </div>
 
