--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,16 +7,23 @@
     <title>locomotiva.ml</title>
 
     <link rel="stylesheet" href="/vendor/pure/pure-min.css">
-    <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="/style.css">
 
-    <link rel="shortcut icon" type="image/x-icon" href="/public/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.png">
+
+	<meta property="og:title" content="locomotiva.ml - experienced agile developers team">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://locomotiva.ml">
+    <meta property="og:image" content='http://locomotiva.ml/logo.png'>
+    <meta property="og:site_name" content="locomotiva.ml - experienced agile developers team">
+    <meta property="og:description" content="We're here to help you small business owners, startups, organizations, brands build and deliver better software, focusing on user outcomes & simplicity, we minimize risk and increase your product's success with quality code & quality humans.">
 </head>
 
 <body>
 	<div class="splash-container">
 		<div class="splash-background"></div>
 		<div class="splash">
-			<a href="/" class="logo"><img src="/public/logo.png" alt="LOCOMOTIVA"></a>
+			<a href="/" class="logo"><img src="/logo.png" alt="LOCOMOTIVA"></a>
 	    	<h1 class="splash-head">Experienced agile developers that designs, develop & grow your products and ideas</h1>
 	    	<p class="splash-subhead">
 	    		We're here to help you small business owners, startups, organizations, brands build and deliver better software, focusing on user outcomes & simplicity, we minimize risk and increase your product's success with quality code & quality humans.
@@ -28,10 +35,18 @@
 		{{{body}}}
 
 	    <div class="footer l-box is-center">
-		    <a href="/" class="logo"><img src="/public/logo.png" alt="LOCOMOTIVA"></a>
+		    <a href="/" class="logo"><img src="/logo.png" alt="LOCOMOTIVA"></a>
 	    </div>
 	</div>
 
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+		ga('create', 'UA-19971072-11', 'auto');
+		ga('send', 'pageview');
+	</script>
 </body>
 </html>
