--- a/public/style.css
+++ b/public/style.css
@@ -90,10 +90,8 @@ label,
 	-webkit-filter: blur(10px);
 	filter: blur(10px);
 
-	top: -5px;
-	bottom: -5px;
-
-	overflow: hidden;
+	top: 0;
+	left: 0;
 }
 
 
