--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
 
     <title>locomotiva.ml</title>
 
-    <link rel="stylesheet" href="/vendor/pure/pure-min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.5.0/pure-min.css">
     <link rel="stylesheet" href="/style.css">
 
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.png">
