--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
 	<meta property="og:title" content="locomotiva.ml - experienced agile developers team">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://locomotiva.ml">
-    <meta property="og:image" content='http://locomotiva.ml/logo@2x.png'>
+    <meta property="og:image" content='http://locomotiva.ml/fb.png'>
     <meta property="og:site_name" content="locomotiva.ml - experienced agile developers team">
     <meta property="og:description" content="We're here to help you small business owners, startups, organizations, brands build and deliver better software, focusing on user outcomes & simplicity, we minimize risk and increase your product's success with quality code & quality humans.">
 </head>
