--- a/src/css/style.css
+++ b/src/css/style.css
@@ -291,3 +291,120 @@ label,
 		font-size: 300%;
 	}
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
+@import url(http://fonts.googleapis.com/css?family=Quattrocento:400,700);
+@import url(http://fonts.googleapis.com/css?family=Oswald:400,700);
+font-family: 'Quattrocento', serif;
+font-family: 'Oswald', sans-serif;
+
+body {
+  line-height: 1.7em;
+  color: #7f8c8d;
+  font-size: 14px;
+  font-family: 'Quattrocento', serif;
+  font-weight: 400;
+}
+
+p {
+  font-family: 'Quattrocento', serif;
+  font-weight: 400;
+}
+
+.splash-head {
+  font-size: 20px;
+  font-weight: bold;
+  font-weight: 700;
+  line-height: 1em;
+  font-family: 'Oswald', sans-serif;
+}
+
+.splash-subhead {
+  letter-spacing: 0.05em;
+  opacity: 0.8;
+  font-family: 'Quattrocento', serif;
+  font-weight: 400;
+}
+
+body {
+  background-color: white;
+}
+
+.navigation {
+  position: fixed;
+  display: flex;
+  z-index: 2;
+}
+
+.navigation > .main-navigation {
+  text-align: center;
+  width: 100%;
+}
+.navigation > .main-navigation > div {
+  width: 100px;
+  margin: auto;
+}
+
+.hero.player {
+  background: #333;
+}
+
+.hero-content {
+  font-family: 'Oswald', serif;
+  text-transform: uppercase;
+}
+
+.hero-content .title {
+  font: 700 50px/100% 'Oswald' !important;
+  margin-bottom: 40px;
+  color: white;
+
+  text-shadow: 0px 1px 1px #000,0px 1px 1px #000;
+}
+
+.hero-content .subtitle {
+  font: 400 18px/150% 'Quattrocento';
+  color: white;
+  text-shadow: 0px 1px 1px #000,0px 1px 1px #000;
+}
+
+*/
