--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,10 +1,13 @@
 // bower:scss
 // endbower
+//
 
 body {
   background: #fafafa;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #333;
+  margin: 0;
+  padding: 0;
 }
 
 .hero-unit {
