--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,30 +1,6 @@
 // bower:scss
+@import "bower_components/reset-css/_reset.scss";
 // endbower
-//
-
-body {
-  background: #fafafa;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  color: #333;
-  margin: 0;
-  padding: 0;
-}
-
-.hero-unit {
-  margin: 50px auto 0 auto;
-  width: 300px;
-  font-size: 18px;
-  font-weight: 200;
-  line-height: 30px;
-  background-color: #eee;
-  border-radius: 6px;
-  padding: 60px;
-  h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-}
 
 .browserupgrade {
   margin: 0.2em 0;
@@ -33,425 +9,61 @@ body {
   padding: 0.2em 0;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-@import url(//fonts.googleapis.com/css?family=Quattrocento:400,700);
-@import url(//fonts.googleapis.com/css?family=Oswald:400,700);
-/*font-family: 'Quattrocento', serif;*/
-/*font-family: 'Oswald', sans-serif;*/
-
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
+@import url(http://fonts.googleapis.com/css?family=Quattrocento:400,700);
+@import url(http://fonts.googleapis.com/css?family=Oswald:400,700);
+// font-family: 'Quattrocento', serif;
+// font-family: 'Oswald', sans-serif;
 
 body {
   line-height: 1.7em;
+  background-color: white;
   color: #7f8c8d;
   font-size: 14px;
   font-family: 'Quattrocento', serif;
   font-weight: 400;
 }
 
-p {
-  font-family: 'Quattrocento', serif;
-  font-weight: 400;
-}
-
-.footer img {
-  max-width: 70px;
-  opacity: 0.3;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-label,
-.content-head {
-  font-family: 'Oswald', serif;
-}
-
-.pure-img-responsive {
-  max-width: 100%;
+img.img-responsive {
+  width: 100%;
   height: auto;
 }
 
-/*
- * -- LAYOUT STYLES --
- * These are some useful classes which I will need
- */
-.l-box {
-  padding: 1em;
-}
-
-.l-box-lrg {
-  padding: 2em;
-  border-bottom: 1px solid rgba(0,0,0,0.1);
-}
-
-.is-center {
-  text-align: center;
-}
-
-
-/*
- * -- SPLASH STYLES --
- */
-
-.splash-container {
-  z-index: 2;
-  overflow: hidden;
-
-  width: 100%;
-  height: 90%;
-  top: 0;
-  left: 0;
-  position: scroll !important;
-}
-
-.splash-container > .splash-background {
-  position: fixed !important;
-  width: 100%;
-  height: 100%;
-
-  z-index: 1;
-
-  /*background: url(gif-bg.gif) rgba(1, 1, 1, 0.1) no-repeat;*/
-  background-size: cover;
-
-  /*-webkit-filter: blur(10px);
-  filter: blur(10px);*/
-
-  top: 0;
-  left: 0;
-}
-
-
-.splash > .logo > img {
-  max-width: 20%;
-}
-
-.splash {
-  /* absolute center .splash within .splash-container */
-  width: 90%;
-  height: 50%;
-  margin: auto;
-  position: absolute;
-  top: -140px; left: 0; bottom: 0; right: 0;
-  text-align: center;
-  text-transform: uppercase;
-
-  z-index: 9;
-  color: black;
-}
-
-.splash-head {
-  font-size: 20px;
-  font-weight: bold;
-  font-weight: 700;
-  line-height: 1em;
-  font-family: 'Oswald', sans-serif;
-}
-
-.splash-subhead {
-  letter-spacing: 0.05em;
-  opacity: 0.8;
-  font-family: 'Quattrocento', serif;
-  font-weight: 400;
-}
-
-
-/*
- * -- CONTENT STYLES --
- */
-.content-wrapper {
-  /* These styles are required for the "scroll-over" effect */
-  position: absolute;
-  top: 87%;
-  width: 100%;
-  min-height: 12%;
-  z-index: 2;
-  background: white;
-
-}
-
-/* This is the class used for the main content headers (<h2>) */
-.content-head {
-  font-weight: 400;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  margin: 2em 0 1em;
-}
-
-/* This is the class used for the dark-background areas. */
-.ribbon {
-  background: #EEE;
-  color: black;
-}
-
-.ribbon .client {
-  display: flex;
-}
-
-.ribbon .client a {
-  display: inline-block;
-  margin: auto;
-}
-
-.ribbon .client a img {
-  max-width: 200px;
-  max-height: 100px;
-}
-
-
-
-.content.about {
-  background: #111;
-  color: white;
-
-  padding-bottom: 60px;
-  -webkit-font-smoothing:antialiased;
-}
-
-.content.about p {
-  letter-spacing: 0.05em;
-  opacity: 0.8;
-
-  max-width: 80%;
-  margin: 20px auto;
-
-  text-align: justify;
-}
-
-.content.about p:first-child {
-  margin-top: 80px;
-}
-
-.content.contact {
-  -webkit-font-smoothing:antialiased;
-  text-align: justify;
-  padding-bottom: 80px;
-}
-.content.contact .contact-list {
-  padding: 0;
-  margin: 0;
-}
-
-.content.contact .contact-list p {
-  max-width: 80%;
-}
-
-.content.contact .contact-list > li {
-  font-weight: 700;
-  list-style: none;
-  padding: 0;
-  margin: 10px 0;
-}
-
-.content.contact .contact-list > li > a {
-  text-decoration: none;
-  border-bottom: 1px solid #7f8c8d;
-  color: #7f8c8d;
-  font-family: 'Quattrocento', sans-serif;
-}
-
-.content.contact .contact-list > li > a:hover {
-  color: #333;
-  border-bottom: 1px solid #111;
-}
-
-/*
- * -- TABLET (AND UP) MEDIA QUERIES --
- * On tablets and other medium-sized devices, we want to customize some
- * of the mobile styles.
- */
-@media (min-width: 48em) {
-
-  /* We increase the body font size */
-  body {
-    font-size: 16px;
-  }
-  /* We want to give the content area some more padding */
-  .content {
-    padding: 1em;
-  }
-
-  /* We can align the menu header to the left, but float the
-  menu items to the right. */
-  .home-menu {
-    text-align: left;
-  }
-    .home-menu ul {
-      float: right;
-    }
-
-  /* We increase the height of the splash-container */
-/*    .splash-container {
-    height: 500px;
-  }*/
-
-  /* We decrease the width of the .splash, since we have more width
-  to work with */
-  .splash {
-    width: 65%;
-    height: 50%;
-  }
-
-  .splash-head {
-    font-size: 250%;
-  }
-
-  .splash > .logo {
-    max-width: 14%;
-  }
-
-
-  /* We remove the border-separator assigned to .l-box-lrg */
-  .l-box-lrg {
-    border: none;
-  }
-
-}
-
-/*
- * -- DESKTOP (AND UP) MEDIA QUERIES --
- * On desktops and other large devices, we want to over-ride some
- * of the mobile and tablet styles.
- */
-@media (min-width: 78em) {
-  /* We increase the header font size even more */
-  .splash-head {
-    font-size: 300%;
-  }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*
-@import url(http://fonts.googleapis.com/css?family=Quattrocento:400,700);
-@import url(http://fonts.googleapis.com/css?family=Oswald:400,700);
-font-family: 'Quattrocento', serif;
-font-family: 'Oswald', sans-serif;
-
-body {
-  line-height: 1.7em;
-  color: #7f8c8d;
-  font-size: 14px;
-  font-family: 'Quattrocento', serif;
-  font-weight: 400;
-}
-
 p {
   font-family: 'Quattrocento', serif;
   font-weight: 400;
 }
 
-.splash-head {
-  font-size: 20px;
-  font-weight: bold;
-  font-weight: 700;
-  line-height: 1em;
-  font-family: 'Oswald', sans-serif;
-}
+.first-section {
+  height: 90vh;
+  background: #666;
 
-.splash-subhead {
-  letter-spacing: 0.05em;
-  opacity: 0.8;
-  font-family: 'Quattrocento', serif;
-  font-weight: 400;
-}
-
-body {
-  background-color: white;
-}
-
-.navigation {
-  position: fixed;
   display: flex;
-  z-index: 2;
-}
+  align-items: center;
+  justify-content: center;
 
-.navigation > .main-navigation {
-  text-align: center;
-  width: 100%;
-}
-.navigation > .main-navigation > div {
-  width: 100px;
-  margin: auto;
-}
+  .hero-content {
+    font-family: 'Oswald', serif;
+    text-transform: uppercase;
+    flex: none;
+    max-width: 80%;
+    text-align: center;
 
-.hero.player {
-  background: #333;
+    .title {
+      font: 700 30px/100% 'Oswald' !important;
+      margin-bottom: 40px;
+      color: white;
+      text-shadow: 0px 1px 1px #000,0px 1px 1px #000;
+
+      // TABLETS (AND UP)
+      @media (min-width: 48em) {
+        font-size: 50px !important;
+      }
+    }
+
+    .subtitle {
+      font: 400 18px/150% 'Quattrocento';
+      color: white;
+      text-shadow: 0px 1px 1px #000,0px 1px 1px #000;
+    }
+  }
 }
-
-.hero-content {
-  font-family: 'Oswald', serif;
-  text-transform: uppercase;
-}
-
-.hero-content .title {
-  font: 700 50px/100% 'Oswald' !important;
-  margin-bottom: 40px;
-  color: white;
-
-  text-shadow: 0px 1px 1px #000,0px 1px 1px #000;
-}
-
-.hero-content .subtitle {
-  font: 400 18px/150% 'Quattrocento';
-  color: white;
-  text-shadow: 0px 1px 1px #000,0px 1px 1px #000;
-}
-
-*/
