--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -21,6 +21,7 @@ body {
   font-size: 14px;
   font-family: 'Quattrocento', serif;
   font-weight: 400;
+  -webkit-font-smoothing:antialiased;
 }
 
 img.img-responsive {
@@ -33,13 +34,33 @@ p {
   font-weight: 400;
 }
 
-.first-section {
-  height: 90vh;
-  background: #666;
+header.header {
+  &.is-fixed {
+    position: fixed;
+    top: 0;
+    z-index: 2;
+  }
 
+  width: 100%;
+  margin: 1vh auto;
+  text-align: center;
+}
+
+.flex-center {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.mbYTP_wrapper {
+  // filter: blur(5px);
+  // background: url(gif-bg.gif) rgba(1, 1, 1, 0.1) no-repeat;
+  // -webkit-filter: blur(10px);
+}
+
+.first-section {
+  min-height: 90vh;
+  background: #666;
 
   .hero-content {
     font-family: 'Oswald', serif;
@@ -65,5 +86,36 @@ p {
       color: white;
       text-shadow: 0px 1px 1px #000,0px 1px 1px #000;
     }
+  }
+}
+
+.about-section {
+  min-height: 80vh;
+  background: #111;
+  color: white;
+
+  .hero-content {
+    flex: none;
+    max-width: 80%;
+    text-align: left;
+
+    text-transform: uppercase;
+
+    .title {
+      font: 700 30px/100% 'Oswald' !important;
+      margin-bottom: 40px;
+      color: white;
+      text-shadow: 0px 1px 1px #000,0px 1px 1px #000;
+
+      // TABLETS (AND UP)
+      @media (min-width: 48em) {
+        font-size: 50px !important;
+      }
+    }
+
+    .client {
+      img { max-width: 140px; }
+    }
+
   }
 }
