--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,6 +14,11 @@
 // font-family: 'Quattrocento', serif;
 // font-family: 'Oswald', sans-serif;
 
+// clients colors
+$eunerd-primary:    #913899;
+$eunerd-secondary:  #6072BB;
+$bandtripper-primary: #F76B1C;
+
 body {
   line-height: 1.7em;
   background-color: white;
@@ -109,6 +114,11 @@ header.header {
       letter-spacing: 0px;
     }
   }
+}
+
+.cases-section {
+  min-height: 60vh;
+  background-color: $bandtripper-primary;
 }
 
 .clients-section {
