--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,6 @@
 // bower:scss
 @import "bower_components/reset-css/_reset.scss";
+@import "bower_components/bootstrap/scss/bootstrap.scss";
 // endbower
 
 .browserupgrade {
@@ -19,6 +20,13 @@ $eunerd-primary:    #913899;
 $eunerd-secondary:  #6072BB;
 $bandtripper-primary: #F76B1C;
 
+// $navbar-dark-color:                 rgba(255,255,255,.75) !default;
+// $navbar-dark-hover-color:           rgba(255,255,255,.9) !default;
+// $navbar-dark-active-color:          rgba(255,255,255,1) !default;
+// $navbar-light-color:                 rgba($blue,.5) !default;
+// $navbar-light-hover-color:           rgba($blue,.8) !default;
+// $navbar-light-active-color:          rgba($blue,1) !default;
+
 body {
   line-height: 1.7em;
   background-color: white;
@@ -34,6 +42,21 @@ img.img-responsive {
   height: auto;
 }
 
+// navbar
+nav#navbar-main.navbar {
+  font-size: 125%;
+  line-height: 64px;
+
+  .navbar-brand.navbar-center {
+    position: absolute;
+    left: 50%;
+    margin-left: -100px;
+    float: none;
+  }
+}
+
+
+// etc
 p {
   font-family: 'Quattrocento', serif;
   font-weight: 400;
@@ -106,9 +129,12 @@ header.header {
     max-width: 80%;
     text-align: left;
 
-    text-transform: uppercase;
+    h1.title,h2.title,h3.title {
+      text-transform: uppercase;
+    }
 
     p {
+      text-transform: initial;
       text-align: justify;
       font: 18px/200% 'Quattrocento';
       letter-spacing: 0px;
